--- a/Pocket-Pitch/index.html
+++ b/Pocket-Pitch/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="manifest" href="/manifest.webmanifest">
+    <link rel="manifest" href="/manifest.json">
     <meta
       name="viewport"
       content="initial-scale=1, width=device-width, viewport-fit=cover"
     />
+    <meta name="theme-color" content="#171717" />
     <title>Pocket Pitch</title>
   </head>
   <body>
